<resources>
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="name">Name</string>
    <string name="cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="quantitynumber">0</string>
    <string name="thank_you">Thank you !</string>
    <string name="order_summary">ORDER SUMMARY</string>
</resources>