<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/plain_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/name"
                    android:layout_marginBottom="10dp"
                    android:textSize="25dp"
                    />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/HeaderTextStyle"

                    android:text="@string/toppings"

                    />

                <CheckBox
                    android:id="@+id/whipped_cream"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:checked="false"

                    android:paddingLeft="26dp"
                    android:text="@string/cream"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/Chocolate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:checked="false"

                    android:paddingLeft="26dp"
                    android:text="@string/chocolate"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView"

                    android:paddingBottom="5dp"
                    android:text="@string/quantity"

                    style="@style/HeaderTextStyle"

                    />

                <LinearLayout
                    android:layout_width="421dp"
                    android:layout_height="65dp"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.319">

                    <Button
                        android:id="@+id/minus"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"

                        android:onClick="decrement"
                        android:text="@string/minus" />

                    <TextView
                        android:id="@+id/quantity_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/quantitynumber"
                        android:textColor="@android:color/black"
                        android:textSize="35sp" />

                    <Button
                        android:id="@+id/plus"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:onClick="increment"
                        android:text="@string/plus" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:paddingBottom="5dp"
                    android:text="@string/order_summary"
                    style="@style/HeaderTextStyle"
                    />

                <TextView
                    android:id="@+id/order_summary_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.218"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.571" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="submitOrder"
                    android:text="Order"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.264"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.676" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>